Frankbelford/uatv1ba/force-app/main/default/objects/Survey_Question_Choice__c/Survey_Question_Choice__c.object-meta.xml
<CustomObject>
    <label>Survey Question Choice</label>
    <nameField>
        <label>Choice</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Question Choices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>