Frankbelford/uatv1ba/force-app/main/default/objects/Survey_Question_Choice__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <formula>CASE(
    Name,
    &quot;Strongly Agree&quot;, 1,
    &quot;Agree&quot;, 2,
    &quot;Undecided&quot;, 3,
    &quot;Disagree&quot;, 4,
    &quot;Strongly Disagree&quot;, 5,
    NULL
)</formula>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>