Frankbelford/uatv1ba/force-app/main/default/objects/Survey_Question_Choice__c/fields/Survey_ID__c.field-meta.xml
<CustomField>
    <fullName>Survey_ID__c</fullName>
    <formula>CASESAFEID(Survey_Question__r.Survey__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey ID</label>
    <type>Text</type>
</CustomField>