Frankbelford/uatv1ba/force-app/main/default/objects/Survey_Question_Choice__c/fields/Survey_Question__c.field-meta.xml
<CustomField>
    <fullName>Survey_Question__c</fullName>
    <label>Survey Question</label>
    <referenceTo>Survey_Question__c</referenceTo>
    <relationshipLabel>Survey Question Choices</relationshipLabel>
    <relationshipName>Survey_Question_Choices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>